--- a/settings.json
+++ b/settings.json
@@ -31,6 +31,9 @@
   "Aimpoint": true,
   "CQBSS": true,
   "ACOG": true,
+  "PM2": true,
+  "SC3x": true,
+  "SC6x": true,
   "Level1Armor": false,
   "Level1Head": false,
   "Level1Head1": false,
@@ -45,36 +48,37 @@
   "Level3Head": true,
   "Level3Back": true,
   "Level3Back1": true,
-  "M16A4": true,
-  "AWM": true,
-  "M24": true,
-  "Kar98k": true,
+  "AK47": true,
   "AUG": true,
-  "M249": true,
-  "MK14": true,
+  "AWM": true,
+  "Berreta686": false,
+  "DP28": true,
   "Groza": true,
   "HK416": true,
-  "SCARL": true,
+  "Kar98k": true,
+  "M16A4": true,
+  "M24": true,
+  "M249": true,
   "Mini14": false,
-  "SKS": true,
-  "AK47": true,
-  "DP28": true,
+  "MK14": true,
   "Saiga12": false,
-  "UMP": false,
-  "Vector": false,
-  "UZI": false,
-  "VSS": false,
+  "SCARL": true,
+  "SKS": true,
   "Thompson": false,
-  "Berreta686": false,
-  "Winchester": false,
+  "UMP": false,
+  "UZI": false,
+  "Vector": false,
+  "VSS": false,
   "Win94": false,
-  "G18": false,
-  "Rhino45": false,
-  "M1911": false,
-  "R1895": false,
-  "M9": false,
-  "SawenOff": false,
+  "Winchester": false,
+  "FNFal": true,
   "FlareGun": true,
+  "G18": false,
+  "M1911": false,
+  "M9": false,
+  "Rhino45": false,
+  "R1895": false,
+  "SawenOff": false,
   "Bandage": false,
   "MedKit": true,
   "FirstAid": true,
@@ -101,6 +105,10 @@
   "CompensatorSMG": false,
   "Foregrip": true,
   "AngledForegrip": true,
+  "Duckbill": true,
+  "ThumbGrip": true,
+  "LightWeightForeGrip": true,
+  "HalfGrip": true,
   "Ammo_762mm": true,
   "Ammo_556mm": true,
   "Ammo_300Magnum": true,
