--- a/settings.json
+++ b/settings.json
@@ -12,15 +12,15 @@
   "firingLineLength": 20000.0,
   "itemZoomThreshold": 0.08,
   "airDropTextScale": 1000.0,
-  "itemScale": 26.0,
-  "staticItemScale": 200.0,
+  "itemScale": 24.0,
+  "staticItemScale": 180.0,
   "mapMarkerScale": 150.0,
   "airDropScale": 250.0,
-  "vehicleScale": 29.0,
+  "vehicleScale": 30.0,
   "vehicleScalemini": 46.0,
   "planeScale": 350.0,
   "grenadeScale": 15.0,
-  "corpseScale": 45.0,
+  "corpseScale": 50.0,
   "redzoneBombScale": 30.0,
   "aimTimeThreshold": 2000,
   "attackLineDuration": 1000,
@@ -85,6 +85,7 @@
   "PainKiller": true,
   "EnergyDrink": true,
   "Syringe": true,
+  "JerryCan": true,
   "QDSnipe": true,
   "ExSR": true,
   "ExSMG": false,
@@ -205,8 +206,8 @@
   "nameFont_size": 15,
   "nameFont_color": {
     "a": 1.0,
-    "b": 0.0,
-    "g": 0.0,
+    "b": 1.0,
+    "g": 1.0,
     "r": 1.0
   },
   "distanceFont_size": 15,
@@ -216,7 +217,7 @@
     "g": 0.0,
     "r": 1.0
   },
-  "itemFont_size": 15,
+  "itemFont_size": 13,
   "itemFont_color": {
     "a": 1.0,
     "b": 1.0,
